--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "homepage": "https://github.com/sandersky/sandersky.github.io",
   "dependencies": {
     "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-less": "~0.11.0",
     "load-grunt-tasks": "~0.4.0"
   }
 }
